[package]
name = "pg_row_hashes"
version = "0.2.7"
edition = "2021"
repository = "https://github.com/ibotty/pg-row-hashes"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_pg_row_hashes"
path = "./src/bin/pgrx_embed.rs"

[features]
default = ["pg17"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15" ]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16" ]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17" ]
pg_test = []

[dependencies]
bytes = "1"
fasthash = "0.4.0"
itertools = "0.14.0"
md5 = "0.7.0"
pgrx = "=0.13.1"
seahash = "4.1.0"
serde = "1.0.196"

[dev-dependencies]
pgrx-tests = "=0.15.0"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
