[package]
name = "pg_row_hashes"
version = "0.3.2"
edition = "2024"
repository = "https://github.com/ibotty/pg-row-hashes"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_pg_row_hashes"
path = "./src/bin/pgrx_embed.rs"

[features]
default = ["pg18"]
pg18 = ["pgrx/pg18", "pgrx-tests/pg18" ]
pg_test = []

[dependencies]
bytes = "1"
fasthash = "0.4.0"
itertools = "0.15.0"
md5 = "0.8.0"
pgrx = "=0.18"
seahash = "4.1.0"
serde = "1.0.196"

[dev-dependencies]
pgrx-tests = "=0.18"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
